namespaces/network/oauth2-proxy/vs-oauth2-proxy.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
  namespace: network
spec:
  hosts:
    - 'auth.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: oauth2-proxy.network.svc.cluster.local
